--- a/balance-manager/Cargo.toml
+++ b/balance-manager/Cargo.toml
@@ -18,7 +18,7 @@ alloy-sol-macro-input = { version = "=0.7.6", default-features = false }
 # alloy-sol-types = "=0.7.6"
 # alloy-sol-macro = ""
 mini-alloc = "0.4.2"
-# stylus-sdk = { version = "0.6.0", features = ["debug", "hostio"] }
+# stylus-sdk = { version = "0.6.0", features = ["debug"] }
 stylus-sdk = { version = "0.6.0" }
 hex = "0.4.3"
 dotenv = "0.15.0"
